# MessagingAPI

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs  types.rs  utils.rs
src/aligo/: client.rs  config.rs  mod.rs  provider.rs  types.rs  utils.rs
src/clients/: aligo.rs  email.rs  mod.rs  solapi.rs
src/configs/: aligo.rs  email.rs  mod.rs  solapi.rs
src/email/: client.rs  config.rs  mod.rs  provider.rs  types.rs
src/provider/: aligo.rs  email.rs  mod.rs  solapi.rs
src/solapi/: client.rs  config.rs  mod.rs  provider.rs  types.rs  utils.rs
tests/: tester.rs
