[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }

reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

lettre = "0.11.18"

thiserror = "2.0.16"

[features]
email = []
aligo = []
solapi = []

[dev-dependencies]
dotenv = "0.15.0"
