[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"], optional = true }

reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

chrono = "0.4.41"
uuid = { version = "1.18.0", features = ["v4"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
rustc_version = "0.4.1"

lettre = { version = "0.11.18", optional = true }

thiserror = "2.0.16"

[features]
email = ["lettre"]
aligo = ["tokio-util"]
solapi = []

[dev-dependencies]
dotenv = "0.15.0"
