[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"], optional = true }

reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

chrono = { version = "0.4.41", optional = true }
uuid = { version = "1.18.0", features = ["v4"], optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
hex = { version = "0.4.3", optional = true }
rustc_version = { version = "0.4.1", optional = true }

lettre = { version = "0.11.18", default-features = false, features = [
    "builder",
    "smtp-transport",
    "pool",
    "tokio1",
    "tokio1-native-tls",
], optional = true }

thiserror = "2.0.16"

[dev-dependencies]
dotenv = "0.15.0"

[features]
email = ["lettre"]
aligo = ["tokio-util"]
solapi = ["rustc_version", "hex", "sha2", "hmac", "uuid", "chrono"]
